Restructure Okta page

--- a/src/content/graphos/org/sso/multi-org.mdx
+++ b/src/content/graphos/org/sso/multi-org.mdx
@@ -41,7 +41,7 @@ To authenticate access to an organization with a shared SSO configuration, you m
 
 <Note>
 
-While multi-organization SSO is in [preview](resources/product-launch-stages/#preview), all members of an organization with multi-org SSO configured must log in from their IdP. If they try to log in on `studio.apollographql.com/login`, they will receive an error message directing them to log in via IdP.
+When this feature reaches [GA](/resources/product-launch-stages#general-availability), it will also support service-provider-initiated (SP-initiated) SSO.
 
 </Note>
 
@@ -76,3 +76,5 @@ Apollo can also generate login links on request. Please get in touch with your A
 
 While this feature is in [preview](/resources/product-launch-stages#preview), members can only log in with IdP-initiated SSO.
 When in [GA](/resources/product-launch-stages#general-availability), it will also support service-provider-initiated (SP-initiated) SSO.
+
+Therefore, during preview, all members of an organization with multi-org SSO configured must log in from their IdP. If they try to log in on `studio.apollographql.com/login`, they will receive an error message directing them to log in via IdP.
