Use shared components

--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -9,6 +9,8 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 </PremiumFeature>
 
+<SSOPreviewNotice />
+
 This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo single sign-on (SSO). These steps require administrative access to your IdP.
 
 <Note>
@@ -19,6 +21,16 @@ If you use Okta or Azure Active Directory as your identity provider, instead see
 - [Azure AD](./azure-ad-integration-guide/)
 
 </Note>
+
+## Configuration
+
+[To-do]
+
+## Legacy setup
+
+<SSOLegacyCaution />
+
+<ExpansionPanel title="Click to see legacy instructions">
 
 1. Create a new application in your SSO environment. While doing so, set the following values:
 
@@ -73,3 +85,5 @@ If you use Okta or Azure Active Directory as your identity provider, instead see
    - IdP x509 certificate
 
 9. Your Apollo contact will complete your SSO setup.
+
+</ExpansionPanel>
