--- a/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
+++ b/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
@@ -9,7 +9,19 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 </PremiumFeature>
 
+<SSOPreviewNotice />
+
 This guide walks through configuring Azure Active Directory (Azure AD) as your Apollo organization's identity provider (IdP) for single sign-on (SSO).
+
+## Configuration
+
+To-do
+
+## Legacy setup
+
+<SSOLegacyCaution />
+
+<ExpansionPanel title="Click to see legacy instructions">
 
 <Note>
 
@@ -27,8 +39,11 @@ These steps use PingOne's email invite method, because in some cases Apollo's de
    - Under **Supported account types**, select which Microsoft account types will have access.
    - Leave **Redirect URI** empty. You'll provide this information later.
 
-
-   <img src="../../img/sso/azure-app-registration.gif" alt="Azure App Registration" class="screenshot" />
+   <img
+     src="../../img/sso/azure-app-registration.gif"
+     alt="Azure App Registration"
+     className="screenshot"
+   />
 
    Then click **Register**.
 
@@ -38,7 +53,11 @@ These steps use PingOne's email invite method, because in some cases Apollo's de
 2. Still in the **Overview** section, select **Endpoints** from the top menu.
 3. Copy and paste the **OpenID Connect metadata document** URL into the same local text file:
 
-   <img src="../../img/sso/azure-client-id-endpoint.gif" alt="Azure endpoint URL and client ID" class="screenshot" />
+   <img
+     src="../../img/sso/azure-client-id-endpoint.gif"
+     alt="Azure endpoint URL and client ID"
+     className="screenshot"
+   />
 
 ## 3. Create a client secret
 
@@ -46,7 +65,11 @@ These steps use PingOne's email invite method, because in some cases Apollo's de
 
 2. Copy and paste the secret's **Value** field to the same text file you created earlier:
 
-   <img src="../../img/sso/azure-client-secret.gif" alt="Azure client secret" class="screenshot" />
+   <img
+     src="../../img/sso/azure-client-secret.gif"
+     alt="Azure client secret"
+     className="screenshot"
+   />
 
 ## 4. Configure API permissions
 
@@ -62,14 +85,18 @@ These steps use PingOne's email invite method, because in some cases Apollo's de
    <img
      src="../../img/sso/azure-configure-api-permissions.gif"
      alt="Azure configure API permissions"
-     class="screenshot"
+     className="screenshot"
    />
 
 3. From the **Manifest** section of your app registration, find the `groupMembershipClaims` property. Change its value from `null` to either `All` or `SecurityGroup`.
    - This ensures that the group membership claim is included in the access token during SSO.
 4. **Save** your changes.
 
-   <img src="../../img/sso/azure-manifest.png" alt="Azure manifest" class="screenshot" />
+   <img
+     src="../../img/sso/azure-manifest.png"
+     alt="Azure manifest"
+     className="screenshot"
+   />
 
 ## 5. Integrate PingOne with Azure AD
 
@@ -83,8 +110,11 @@ These steps use PingOne's email invite method, because in some cases Apollo's de
    3. For **Scope**, select the OAuth scopes to include in authentication requests.
    4. Click **Next**.
 
-
-   <img src="../../img/sso/azure-pingone-connection.gif" alt="Azure PingOne connection" class="screenshot" />
+   <img
+     src="../../img/sso/azure-pingone-connection.gif"
+     alt="Azure PingOne connection"
+     className="screenshot"
+   />
 
 5. In Step 2 of the wizard, copy the **PingOne Redirect URI** and paste it on the Azure AD app registration.
 
@@ -92,8 +122,11 @@ These steps use PingOne's email invite method, because in some cases Apollo's de
    - Select **Redirect URIs > Add a platform > Web** and enter the Redirect URI you copied from PingOne. Select **Configure** to save changes.
    - Back on the PingOne configuration wizard, select **Next** after copying and pasting the URI.
 
-
-   <img src="../../img/sso/azure-pingone-redirect-uri.gif" alt="Azure PingOne redirect URI" class="screenshot" />
+   <img
+     src="../../img/sso/azure-pingone-redirect-uri.gif"
+     alt="Azure PingOne redirect URI"
+     className="screenshot"
+   />
 
 6. In Step 3 of the wizard, configure the **Map Attributes** section by mapping the incoming attributes or claims from Azure AD to PingOne. You can leave this with the default Attribute Mapping.
 
@@ -112,12 +145,16 @@ After you successfully configure the identity bridge between Azure AD and PingOn
 1. Select **Meteor Development Group - GraphOS Studio** under **Complete your Application Configuration**.
 
    <Note>
-   
+
    If the **Add OIDC Application** wizard doesn't automatically pop-up, select the **SAML** tab and then select the **OIDC** tab.
-   
+
    </Note>
 
-   <img src="../../img/sso/azure-oidc-application.gif" alt="PingOne OIDC application" class="screenshot" />
+   <img
+     src="../../img/sso/azure-oidc-application.gif"
+     alt="PingOne OIDC application"
+     className="screenshot"
+   />
 
 2. In Step 1 of the **Add OIDC Application** wizard, configure the application name, description, category, and icon (optional).
 3. Click **Next** for Steps 2-5 (these are configured by default).
@@ -128,3 +165,5 @@ After you successfully configure the identity bridge between Azure AD and PingOn
 ## 7. Notify Apollo
 
 After you complete the steps above, reach out to your Apollo contact. They will complete your SSO setup.
+
+</ExpansionPanel>
