--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -9,12 +9,7 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 </PremiumFeature>
 
-<PreviewFeature>
-
-This page contains updated instructions (as of April 2024) for configuring SSO with Apollo's new SSO system.
-The new SSO system is currently in [preview](/resources/product-launch-stages#preview) and has planned future development. Refer to the [legacy setup section](#legacy-setup) for legacy SSO setup instructions.
-
-</PreviewFeature>
+<SSOPreviewNotice />
 
 This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for single sign-on (SSO). Setup requires an Okta account with administrator privileges. Once you've set up your integration, you need to [assign users to it in Okta](#assign-users-in-okta) so they can access GraphOS Studio via SSO.
 
@@ -148,11 +143,7 @@ Okta displays every user and group you've assigned to the integration in the **A
 
 ## Legacy setup
 
-<Caution>
-
-The below instructions are provided for reference only. Beginning in April 2024, Apollo recommends that all organizations use the updated instructions provided above to create a new SSO connection.
-
-</Caution>
+<SSOLegacyCaution />
 
 <ExpansionPanel title="Click to see legacy instructions">
 
