--- a/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
+++ b/src/content/graphos/org/sso/azure-ad-integration-guide.mdx
@@ -13,7 +13,7 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 This guide walks through configuring Azure Active Directory (Azure AD) as your Apollo organization's identity provider (IdP) for single sign-on (SSO).
 
-## Configuration
+## Setup
 
 To-do
 
