--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -13,7 +13,7 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for single sign-on (SSO). Setup requires an Okta account with administrator privileges. Once you've set up your integration, you need to [assign users to it in Okta](#assign-users-in-okta) so they can access GraphOS Studio via SSO.
 
-## Configuration
+## Setup
 
 Apollo's latest SSO system (as of April 2024) requires you to create a custom Okta integration to configure SSO.
 Follow the steps below.
