--- a/src/content/shared/sso-legacy-caution.mdx
+++ b/src/content/shared/sso-legacy-caution.mdx
@@ -1,5 +1,5 @@
 <Caution>
 
-The below instructions are provided for reference only. Beginning in April 2024, Apollo recommends that all organizations use the [updated instructions](#configuration) to create a new SSO connection.
+The below instructions are provided for reference only. Beginning in April 2024, Apollo recommends that all organizations use the [updated instructions](#setup) to create a new SSO connection.
 
 </Caution>
