--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -105,7 +105,7 @@ The **Create SAML Integration** dialog includes multiple steps:
      src="../../img/sso/okta-settings.jpg"
      alt="Okta settings"
      className="screenshot"
-   />{' '}
+   />
 
 2. In the dialog that appears, copy and paste the contents of the **IDP metadata** text box into a text file:
 
@@ -113,7 +113,7 @@ The **Create SAML Integration** dialog includes multiple steps:
      src="../../img/sso/okta-idp-metadata.jpg"
      alt="Okta IdP metadata"
      className="screenshot"
-   />{' '}
+   />
 
 3. Send the text file to your Apollo contact. They will complete your SSO setup.
 
@@ -147,7 +147,7 @@ Okta displays every user and group you've assigned to the integration in the **A
 
 <ExpansionPanel title="Click to see legacy instructions">
 
-With the former SSO sytem, you could use Okta's GraphOS integration (deprecated) or create a custom SAML integration.
+With the former SSO system, you could use Okta's GraphOS integration (deprecated) or create a custom SAML integration.
 
 ### Using Okta's Apollo GraphOS integration (deprecated)
 
@@ -290,7 +290,7 @@ The **Create SAML Integration** dialog includes multiple steps:
      src="../../img/sso/okta-settings.jpg"
      alt="Okta settings"
      className="screenshot"
-   />{' '}
+   />
 
 2. In the dialog that appears, copy and paste the contents of the **IDP metadata** text box into a text file:
 
@@ -298,7 +298,7 @@ The **Create SAML Integration** dialog includes multiple steps:
      src="../../img/sso/okta-idp-metadata.jpg"
      alt="Okta IdP metadata"
      className="screenshot"
-   />{' '}
+   />
 
 3. Send the text file to your Apollo contact. They will complete your SSO setup.
 
