Rename Azure AD -> Microsoft Entra ID

--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -122,7 +122,7 @@ You can integrate GraphOS with your organization's identity provider (IdP) to en
 SSO configuration is available for the following:
 
 - [Okta](../org/sso/okta-integration-guide/)
-- [Azure AD](../org/sso/azure-ad-integration-guide/)
+- [Microsoft Entra ID](../org/sso/microsoft-entra-id-integration-guide/) (formerly known as Azure Active Directory)
 - [Generic SAML](../org/sso/saml-integration-guide/)
 
 <Note>
