--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -23,7 +23,7 @@ Different GraphOS organizations can share the same identity provider (IdP) and S
 For multi-organization SSO, each organization needs to individually configure SSO according to the latest instructions (as of April 2024) for their particular IdP:
 
 - [Okta](./okta-integration-guide)
-- [Azure AD](./azure-ad-integration-guide)
+- [Microsoft Entra ID](./microsoft-entra-id-integration-guide) (formerly known as Azure Active Directory)
 - [Generic SAML-based IdP](./saml-integration-guide)
 
 ## Switching between organizations
