--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -201,7 +201,9 @@ Your Apollo contact will let you know once SSO setup is complete.
 
 ### Using a custom integration (legacy)
 
-Beginning in April 2024, Apollo recommends using the updated instructions for [creating a custom integration](#configuration) provided above. You can refer to the instructions below if you need them for a previously created custom integration. If you previously configured SSO using the instructions below and want to use [multi-org](./multi-org) you need to recreate your SSO connection with the [updated instructions](#configuration).
+Beginning in April 2024, Apollo recommends using the updated instructions for [creating a custom integration](#configuration) provided above. You can refer to the instructions below if you need them for a previously created custom integration.
+
+If you previously configured SSO using the instructions below and want to use [multi-organization SSO](./multi-organization) you need to recreate your SSO connection with the [updated instructions](#configuration).
 
 #### Step 1. Create an app integration
 
