--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -15,10 +15,10 @@ This guide walks through configuring a generic SAML-based identity provider (IdP
 
 <Note>
 
-If you use Okta or Azure Active Directory as your identity provider, instead see the corresponding guide for your tool:
+If you use Okta or Microsoft Entra ID (formerly known as Azure Active Directory) as your identity provider, instead see the corresponding guide for your tool:
 
 - [Okta](./okta-integration-guide/)
-- [Azure AD](./azure-ad-integration-guide/)
+- [Microsoft Entra ID](./microsoft-entra-id-integration-guide/)
 
 </Note>
 
