Update generic SAML

--- a/src/content/shared/sso-preview-notice.mdx
+++ b/src/content/shared/sso-preview-notice.mdx
@@ -1,6 +1,6 @@
 <PreviewFeature>
 
-This page contains updated instructions (as of April 2024) for configuring SSO with Apollo's new SSO system.
-The new SSO system is currently in [preview](/resources/product-launch-stages#preview) and has planned future development. Refer to the [legacy setup section](#legacy-setup) for legacy SSO setup instructions.
+This page contains updated instructions (as of April 2024) for configuring SSO with Apollo.
+The new SSO setup is currently in [preview](/resources/product-launch-stages#preview).
 
 </PreviewFeature>
