--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -11,33 +11,53 @@ This feature is not available as part of an [Enterprise trial](../plans/#enterpr
 
 <SSOPreviewNotice />
 
-This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo single sign-on (SSO). These steps require administrative access to your IdP.
-
-<Note>
+This guide walks through configuring a generic SAML-based identity provider (IdP) for use with Apollo SSO. These steps require administrative access to your IdP.
 
 If you use Okta or Microsoft Entra ID (formerly known as Azure Active Directory) as your identity provider, instead see the corresponding guide for your tool:
 
 - [Okta](./okta-integration-guide/)
 - [Microsoft Entra ID](./microsoft-entra-id-integration-guide/)
 
-</Note>
+<SSOMigrationNotice />
 
 ## Setup
 
-1. Send your Apollo contact your IdP SAML XML metadata file. If you can't send this file, send one of the following instead:
+1. Send your Apollo contact the following:
 
-   - IdP entity ID
-   - IdP single sign-on URL / SSO URL
-   - IdP x509 certificate
+   - The organization name you are setting up SSO for
+   - Your IdP SAML XML metadata file. If you can't send this file, send one of the following instead:
 
-2. Your Apollo contact will respond with a URL to download Apollo's service provider (SP) SAML XML metadata file.
+     - IdP entity ID
+     - IdP single sign-on URL / SSO URL
+     - IdP x509 certificate
+
+2. Your Apollo contact will respond with a URL to download Apollo's service provider (SP) SAML XML metadata file as well as the following values:
+
+   - Single Sign-on URL
+   - Entity ID
+   - RelayState
+
+   <Note>
+
+   These values differ for each organization. If setting up SSO for multiple organizations, ensure you use different values.
+
+   </Note>
 
 3. Create a new application in your SSO environment. While doing so, set the following values:
 
    - **App Name**: Apollo GraphOS
    - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
 
-4. If your IdP permits it, upload the Apollo-provided SP SAML XML metadata file. Otherwise, open the XML metadata file and view the SAML configuration settings and manually enter them in your IdP.
+4. If your IdP permits it, upload the Apollo-provided SP SAML XML metadata file. Otherwise, open the XML metadata file, view the SAML configuration settings, and manually enter them in your IdP.
+
+   - Set your **Single Sign-on URL** or **ACS URL** to the Single Sign-on URL provided by your Apollo contact. You can also use this value for the following fields:
+
+     - **Recipient**
+     - **ACS (Consumer) URL Validator**
+     - **ACS (Consumer) URL**
+
+   - Set your **Entity ID** to the value provided by your Apollo contact.
+   - Set your **RelayState** to the value provided by your Apollo contact.
 
 5. Set the following user attributes:
 
@@ -47,11 +67,9 @@ If you use Okta or Microsoft Entra ID (formerly known as Azure Active Directory)
    - `given_name`: `user.firstName`
    - `family_name`: `user.lastName`
 
-6. Save your configuration once done.
+6. Save your configuration.
 
-7. Assign users to the Apollo GraphOS application.
-
-   - Reach out to your SSO or Identity & Access Management team for help assigning the relevant groups and users to `Apollo GraphOS`.
+7. Assign users to your new Apollo GraphOS application. Reach out to your SSO or Identity & Access Management team for help assigning the relevant groups and users.
 
 ## Legacy setup
 
